ocaml/testsuite/tests/jane-modular-syntax/user_error3.compilers.reference
File "user_error3.ml", line 21, characters 25-27:
21 | let _unknown_extension = () [@jane.this_extension_doesn't_exist];;
                              ^^
Error: Unknown extension "this_extension_doesn't_exist" referenced via
       a [@jane.this_extension_doesn't_exist] attribute
